--- a/pages/admin/admin-users-panel.html
+++ b/pages/admin/admin-users-panel.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -15,18 +15,10 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="./styles/style.css" />
-    <title>Game Store</title>
+    <link rel="stylesheet" href="../../styles/style.css" />
+    <title>Admin - Usuarios</title>
   </head>
   <body>
-    <header>
-      <!-- AQUI VA EL NAVBAR -->
-    </header>
-    <main>
-      <!-- AQUI VA EL CONTENIDO DE TU PAGINA -->
-    </main>
-    <footer>
-      <!-- AQUI VA EL FOOTER -->
-    </footer>
-  </body>
+		
+	</body>
 </html>
