--- a/pages/login-register.html
+++ b/pages/login-register.html
@@ -15,8 +15,8 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="./styles/style.css" />
-    <title>Game Store</title>
+    <link rel="stylesheet" href="../styles/style.css" />
+    <title>Ingreso/Registro</title>
   </head>
   <body>
     <header>
