--- a/pages/admin/admin-games-panel.html
+++ b/pages/admin/admin-games-panel.html
@@ -22,7 +22,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Game Store TE ESTOY CAMBIANDO</a>
+          <a class="navbar-brand" href="#">Game Store TE ESTOY CAMBIANDOO</a>
           <button
             class="navbar-toggler"
             type="button"
