navbar-carousel-de-prueba

--- a/index.html
+++ b/index.html
@@ -21,9 +21,27 @@
   <body>
     <header>
       <!-- AQUI VA EL NAVBAR -->
+      <nav class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+          <span class="navbar-brand mb-0 h1">Navbar</span>
+        </div>
+      </nav>
     </header>
     <main>
       <!-- AQUI VA EL CONTENIDO DE TU PAGINA -->
+      <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="https://www.callofduty.com/content/dam/atvi/callofduty/cod-touchui/kronos/common/social-share/social-share-image.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="https://www.callofduty.com/content/dam/atvi/callofduty/cod-touchui/kronos/common/social-share/social-share-image.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="https://www.callofduty.com/content/dam/atvi/callofduty/cod-touchui/kronos/common/social-share/social-share-image.jpg" class="d-block w-100" alt="...">
+          </div>
+        </div>
+      </div>
     </main>
     <footer>
       <!-- AQUI VA EL FOOTER -->
