--- a/pages/login-register.html
+++ b/pages/login-register.html
@@ -9,6 +9,8 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    < link rel = "stylesheet"
+    href = "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" / >
   </script>
   <link rel="stylesheet" href="../styles/style.css" />
   <title>Ingreso/Registro</title>
@@ -27,19 +29,28 @@
             <span>Email</span>
             <input type="email" placeholder="">
           </div>
-          <div class="inputBx">
+          <div class="inputBx mb-1">
             <span>Contraseña</span>
             <input type="password" name="">
           </div>
-          <div class="remember">
+          <div class="d-flex justify-content-between">
+            <label><input type="checkbox" name=""> Recuérdame</label>
+
+            <a href="#">Recuperar contraseña</a></p>
+          </div>
+          <!-- <div class="remember">
             <label><input type="checkbox" name=""> Recuérdame</label>
           </div>
           <div class="inputBx">
-            <input type="submit" value="Acceder" name="">
-          </div>
-          <div class="inputBx">
-            <p>¿Aún no tenés una cuenta? <a href="#">Registrate</a></p>
-          </div>
+            <a href="#">Recuperar contraseña</a></p>
+          </div> -->
+        </form>
+        <div class="inputBx">
+          <input type="submit" value="Ingresar" name="">
+        </div>
+        <div class="inputBx">
+          <p>¿Aún no tenés una cuenta? <a href="#">Registrate</a></p>
+        </div>
         </form>
         <h3>o Accedé con</h3>
         <ul class="sci">
