Logos de face y google
Ahi agregue dichos logos, pero no quedan como en el mockup, me gustaria si me podes ayudar ahi jorge, asi ya solo quedaria poner el acceso de admin, y ya paso a la pag de registro por favor

--- a/pages/login-register.html
+++ b/pages/login-register.html
@@ -53,14 +53,24 @@
         </div>
         </form>
         <h3>o Accedé con</h3>
-        <ul class="sci">
-          <li><img src="google.png"></li>
-          <li><img src="facebook.png"></li>
-        </ul>
+        <div class="login-container">
+              <div class="login-container">
+          <div class="login-info-container">
+            <div class="social-login">
+              <div class="social-login-element">
+                <img src="/assets/images/google.svg" alt="google-image">
+                <span>Google</span>
+              </div>
+              <div class="social-login-element">
+                <img src="/assets/images/facebook.svg" alt="facebook-image">
+                <span>Facebook</span>
+              </div>
+            </div>
+          </div>
+             </div>
       </div>
-    </div>
-
   </section>
+
   <header>
     <!-- AQUI VA EL NAVBAR -->
   </header>
