Creada pagina de registro
También achique el tamaño de las letras en algunas partes. No me esta saliendo el placeholder del email nose porque.
Aun me falta agregar el acceso a admin.
Me quedo raro de margenes el titulo de la pagina de registro
Todavia no estoy conforme con los botones de face y google

--- a/pages/register.html
+++ b/pages/register.html
@@ -19,25 +19,27 @@
 <body>
   <section>
     <div class="imgBx">
-      <img src="/assets/images/cod.jpg">
+      <img src="/assets/images/lol.jpg">
     </div>
     <div class="contentBx">
       <div class="formBx">
-        <h2>Iniciá sesión con tu cuenta</h2>
+        <h2>Completá tus datos para registrarte</h2>
         <form>
           <div class="inputBx">
+            <span>Nombre y Apellido</span>
+            <input type="name" placeholder="Crash Bandicoot" required>
+          </div>
+          <div class="inputBx">
             <span>Email</span>
-            <input type="email" placeholder="">
+            <input type="email" placeholder="crash@bandicoot.com" required>
           </div>
           <div class="inputBx mb-1">
             <span>Contraseña</span>
-            <input type="password" name="">
+            <input type="password" name="" required class="mb-3">
+            <span>Confirmar Contraseña</span>
+            <input type="password" name="" required>
           </div>
-          <div class="d-flex justify-content-between">
-            <label><input type="checkbox" name=""> Recuérdame</label>
-
-            <a href="#">Recuperar contraseña</a></p>
-          </div>
+         
           <!-- <div class="remember">
             <label><input type="checkbox" name=""> Recuérdame</label>
           </div>
@@ -46,13 +48,13 @@
           </div> -->
         </form>
         <div class="inputBx">
-          <input type="submit" value="Ingresar" name="">
+          <input type="submit" value="Registrarme" name="">
         </div>
         <div class="inputBx">
-          <p>¿Aún no tenés una cuenta? <a href="#">Registrate</a></p>
+          <p>¿Ya tenés una cuenta? <a href="/pages/login.html">Accedé</a></p>
         </div>
         </form>
-        <h3>o Accedé con</h3>
+        <h3>o Registrate con</h3>
         <div class="login-container">
               <div class="login-container">
           <div class="login-info-container">
