--- a/pages/admin/admin-panel.html
+++ b/pages/admin/admin-panel.html
@@ -17,9 +17,9 @@
     ></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 		<link rel="stylesheet" href="../../styles/style.css">
-    <script src="../../scripts/script.js" defer></script>
-    <link rel="stylesheet" href="../../styles/style.css" />
-    <title>Admin - Usuarios</title>
+    <script src="../../scripts/admin/games-scripts.js" defer></script>
+    <link rel="stylesheet" href="../../styles/admin-styles.css" />
+    <title>Administracion</title>
   </head>
   <body>
 		<header>
