--- a/pages/admin/admin-panel.html
+++ b/pages/admin/admin-panel.html
@@ -16,7 +16,6 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-		<link rel="stylesheet" href="../../styles/style.css">
     <script src="../../scripts/admin/games-scripts.js" defer></script>
     <link rel="stylesheet" href="../../styles/admin-styles.css" />
     <title>Administracion</title>
@@ -55,47 +54,47 @@
 				<div class="admin-panel-container container">
           <div class="row">
             <!-- ADMIN PANEL OPTIONS -->
-            <div class="admin-aside-col col col-2 p-0">
+            <div class="admin-aside-col col col-sm-12 col-lg-2 p-0 pb-4 pb-lg-0">
               <!-- ADMIN PROFILE -->
-              <div class="admin-info-block p-1">
-                <div class="d-flex flex-row align-items-center py-4 px-2">
+              <div class="admin-info-block p-1 ">
+                <div class="d-flex flex-column flex-lg-row align-items-center py-4 px-2">
                   <img src="https://gravatar.com/avatar/a02f0cd317c4805ecc316db0e3741327?s=400&d=robohash&r=x" alt="admin avatar" class="w-25 rounded-circle bg-dark">
-                  <h4 class="ps-3 mb-0">Hola Jorge!</h4>
+                  <h4 class="mb-0 mt-3 mt-lg-0 ps-lg-3">Hola Jorge!</h4>
                 </div>
               </div>
               <!-- ADMIN TABS BUTTONS -->
               <div class="admin-menu-block p-2">
                 <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                  <button class="active btn btn-outline-success text-start m-1" id="v-pills-home-tab" data-bs-toggle="pill" data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home" aria-selected="true"><i class="bi bi-controller"></i> Juegos</button>
-                  <button class="btn btn-outline-primary text-start m-1" id="v-pills-profile-tab" data-bs-toggle="pill" data-bs-target="#v-pills-profile" type="button" role="tab" aria-controls="v-pills-profile" aria-selected="false"><i class="bi bi-people"></i> Usuarios</button>
+                  <button class="active btn btn-outline-success text-sm-center text-lg-start m-1" id="v-pills-home-tab" data-bs-toggle="pill" data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home" aria-selected="true"><i class="bi bi-controller"></i> Juegos</button>
+                  <button class="btn btn-outline-primary text-sm-center text-lg-start m-1" id="v-pills-profile-tab" data-bs-toggle="pill" data-bs-target="#v-pills-profile" type="button" role="tab" aria-controls="v-pills-profile" aria-selected="false"><i class="bi bi-people"></i> Usuarios</button>
                 </div>
               </div>
             </div>
             <!-- ADMIN PANEL CONTENT -->
-            <div class="admin-content-col col col-10 p-0">
+            <div class="admin-content-col col col-sm-12 col-lg-10 p-0">
               <div class="tab-content" id="v-pills-tabContent">
                 <!-- GAMES TAB CONTENT -->
                 <div class="games-tab tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
                   <!-- GAMES LIST HEADER -->
                   <div class="games-header-block d-flex justify-content-between py-4 px-4">
                     <h1 class="fw-bold">Juegos</h1>
-                    <button type="button" class="btn btn-success fw-bold fs-5" data-bs-toggle="modal" data-bs-target="#addGameModal"><i class="bi bi-plus-lg"></i> Agregar Juego</button>
+                    <button type="button" class="btn btn-success fw-bold fs-5" onclick="addGame()"><i class="bi bi-plus-lg"></i> Agregar Juego</button>
                     <!-- MODAL PARA AGREGAR JUEGO -->
                     <div class="modal fade" id="addGameModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                       <div class="modal-dialog modal-dialog-centered">
                         <div class="modal-content">
                           <div class="modal-header">
-                            <h5 class="modal-title fs-4 fw-bold" id="staticBackdropLabel">Agregar juego</h5>
+                            <h5 class="modal-title fs-4 fw-bold" id="staticBackdropLabel">Agregar Juego</h5>
                           </div>
                           <div class="modal-body">
                             <form id="addGameForm">
                               <div class="mb-3">
                                 <label for="name" class="form-label">Nombre:</label>
-                                <input type="text" id="name" class="form-control" minlength="2" maxlength="20" autofocus required>
+                                <input type="text" id="name" class="form-control" minlength="2" maxlength="20" required>
                               </div>
                               <div class="mb-3">
                                 <label for="description" class="form-label">Descripcion</label>
-                                <input type="text" id="description" class="form-control" minlength="0" maxlength="20" required>
+                                <input type="text" id="description" class="form-control" minlength="1" maxlength="20" required>
                               </div>
                               <div class="mb-3">
                                 <label for="category" class="form-label">Categoria:</label>
@@ -104,11 +103,13 @@
                                   <option value="shooter">Disparos</option>
                                   <option value="strategy">Estrategia</option>
                                   <option value="simulation">Simulacion</option>
+                                  <option value="rpg">RPG</option>
+                                  <option value="other">Otro</option>
                                 </select>
                               </div>
                               <div class="mb-3">
                                 <label for="trailer-url" class="form-label">URL del trailer</label>
-                                <input type="text" id="trailerUrl" class="form-control" pattern="^(https?\:\/\/)?(www\.youtube\.com|youtu\.be)\/.+$" required>
+                                <input type="text" id="trailerUrl" class="form-control" pattern="^((?:https?:)?\/\/)?((?:www|m)\.)?((?:youtube\.com|youtu.be))(\/(?:[\w\-]+\?v=|embed\/|v\/)?)([\w\-]+)(\S+)?$" required>
                               </div>
                               <div class="form-check">
                                 <input class="form-check-input" type="checkbox" value="" id="checkPublished">
@@ -119,7 +120,7 @@
                             </form>
                           </div>
                           <div class="modal-footer">
-                            <button type="submit" form="addGameForm" class="btn btn-success" data-bs-dismiss="modal">Agregar</button>
+                            <button type="submit" form="addGameForm" class="btn btn-success">Agregar</button>
                             <button type="button" class="btn btn-outline-secondary text-white" data-bs-dismiss="modal">Cancelar</button>
                           </div>
                         </div>
@@ -129,7 +130,7 @@
                   <!-- GAMES LIST MAIN -->
                   <div>
                     <div class="d-flex justify-content-between pb-2 px-4 py-3">
-                      <h3 class="align-self-center fs-3 mb-0 ps-1" id="table-info-text">13 juegos en el catalogo</h3>
+                      <h3 class="align-self-center fs-lg-3 mb-0 ps-1" id="table-info-text">13 juegos en el catalogo</h3>
                       <div>
                         <form class="d-flex">
                           <div class="input-group flex-nowrap">
@@ -145,20 +146,22 @@
                     </div>
                     <!-- GAMES TABLE -->
                     <div class="px-4 py-3">
-                      <table id="games-table" class="table table-bordered table-light table-striped table-hover text-center">
-                        <thead class="table-dark">
-                          <tr>
-                            <th onclick="sortTable(0)">Codigo <i class="bi bi-chevron-expand"></i></th>
-                            <th onclick="sortTable(1)">Nombre <i class="bi bi-chevron-expand"></i></th>
-                            <th onclick="sortTable(2)">Categoria <i class="bi bi-chevron-expand"></i></th>
-                            <th onclick="sortTable(3)">Calificacion <i class="bi bi-chevron-expand"></i></th>
-                            <th>Publicado</th>
-                            <th>Opciones</th>
-                          </tr>
-                        </thead>
-                        <tbody id="games-table-body">
-                        </tbody>
-                      </table>
+                      <div class="table-responsive">
+                        <table id="games-table" class="table table-bordered table-light table-striped table-hover text-center">
+                          <thead class="table-dark">
+                            <tr>
+                              <th onclick="sortTable(0)">Codigo <i class="bi bi-chevron-expand"></i></th>
+                              <th onclick="sortTable(1)">Nombre <i class="bi bi-chevron-expand"></i></th>
+                              <th onclick="sortTable(2)">Categoria <i class="bi bi-chevron-expand"></i></th>
+                              <th onclick="sortTable(3)">Calificacion <i class="bi bi-chevron-expand"></i></th>
+                              <th>Publicado</th>
+                              <th>Opciones</th>
+                            </tr>
+                          </thead>
+                          <tbody id="games-table-body">
+                          </tbody>
+                        </table>
+                      </div>
                       <!-- MODAL PARA DESTACAR JUEGO -->
                       <div class="modal fade" id="starGameModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                         <div class="modal-dialog modal-dialog-centered">
@@ -207,7 +210,7 @@
                               <form id="modifyGameForm"">
                                 <div class="mb-3">
                                   <label for="name" class="form-label">Nombre:</label>
-                                  <input type="text" id="name" class="form-control" required>
+                                  <input type="text" id="name" class="form-control" minlength="2" maxlength="20" required>
                                 </div>
                                 <div class="mb-3">
                                   <label for="description" class="form-label">Descripcion</label>
@@ -216,16 +219,28 @@
                                 <div class="mb-3">
                                   <label for="category" class="form-label">Categoria:</label>
                                   <select name="category" id="category" class="form-select" required>
-                                    <option selected value="Survival">Supervivencia</option>
-                                    <option value="Shooter">Disparos</option>
-                                    <option value="Strategy">Estrategia</option>
-                                    <option value="Simulation">Simulacion</option>
+                                    <option selected value="survival">Supervivencia</option>
+                                    <option value="shooter">Disparos</option>
+                                    <option value="strategy">Estrategia</option>
+                                    <option value="simulation">Simulacion</option>
+                                    <option value="rpg">RPG</option>
+                                    <option value="other">Otro</option>
                                   </select>
+                                </div>
+                                <div class="mb-3">
+                                  <label for="trailer-url" class="form-label">URL del trailer</label>
+                                  <input type="text" id="trailerUrl" class="form-control" pattern="^((?:https?:)?\/\/)?((?:www|m)\.)?((?:youtube\.com|youtu.be))(\/(?:[\w\-]+\?v=|embed\/|v\/)?)([\w\-]+)(\S+)?$" required>
+                                </div>
+                                <div class="form-check">
+                                  <input class="form-check-input" type="checkbox" value="" id="checkPublished">
+                                  <label class="form-check-label" for="checkPublished">
+                                    Publicar juego.
+                                  </label>
                                 </div>
                               </form>
                             </div>
                             <div class="modal-footer">
-                              <button type="submit" id="confirmModify" form="modifyGameForm" class="btn btn-warning" data-bs-dismiss="modal">Modificar</button>
+                              <button type="submit" id="confirmModify" form="modifyGameForm" class="btn btn-warning">Modificar</button>
                               <button type="button" class="btn btn-outline-secondary text-white" data-bs-dismiss="modal">Cancelar</button>
                             </div>
                           </div>
