--- a/pages/admin/admin-panel.html
+++ b/pages/admin/admin-panel.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="../../styles/admin-styles.css" />
     <title>Administracion</title>
   </head>
-  <body>
+  <body class="min-vh-100">
 		<header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
@@ -39,18 +39,18 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Panel de admin</a>
-              </li>
+              <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Inicio</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Nosotros</a></li>
+            </ul>
+            <ul class="navbar-nav mb-2 mb-lg-0">
+              <li class="nav-item"><a class="nav-link" href="#">Ingresar</a></li>
             </ul>
           </div>
         </div>
       </nav>
     </header>
-    <main>
+    <main class="my-4">
       <section class="admin-panel-section">
 				<div class="admin-panel-container container">
           <div class="row">
@@ -91,7 +91,13 @@
                             <form id="addGameForm">
                               <div class="mb-3">
                                 <label for="name" class="form-label">Nombre:</label>
-                                <input type="text" id="name" class="form-control" minlength="2" maxlength="20" required>
+                                <input type="text" id="name" class="form-control" oninput="validateName()" minlength="2" maxlength="20" required>
+                                <div class="d-none text-success" id="valid-name-text">
+                                  Nombre disponible!
+                                </div>
+                                <div class="d-none text-danger" id="invalid-name-text">
+                                  Nombre no disponible o invalido
+                                </div>
                               </div>
                               <div class="mb-3">
                                 <label for="description" class="form-label">Descripcion</label>
@@ -100,16 +106,16 @@
                               <div class="mb-3">
                                 <label for="category" class="form-label">Categoria:</label>
                                 <select name="category" id="category" class="form-select" required>
-                                  <option selected value="survival">Supervivencia</option>
+                                  <option value="survival">Supervivencia</option>
                                   <option value="shooter">Disparos</option>
                                   <option value="strategy">Estrategia</option>
                                   <option value="simulation">Simulacion</option>
                                   <option value="rpg">RPG</option>
-                                  <option value="other">Otro</option>
+                                  <option selected value="other">Otro</option>
                                 </select>
                               </div>
                               <div class="mb-3">
-                                <label for="trailer-url" class="form-label">URL del trailer</label>
+                                <label for="trailerUrl" class="form-label">URL del trailer</label>
                                 <input type="text" id="trailerUrl" class="form-control" pattern="^((?:https?:)?\/\/)?((?:www|m)\.)?((?:youtube\.com|youtu.be))(\/(?:[\w\-]+\?v=|embed\/|v\/)?)([\w\-]+)(\S+)?$" required>
                               </div>
                               <div class="form-check">
@@ -121,7 +127,7 @@
                             </form>
                           </div>
                           <div class="modal-footer">
-                            <button type="submit" form="addGameForm" class="btn btn-success">Agregar</button>
+                            <button type="submit" form="addGameForm" class="btn btn-success" id="add-game-confirm">Agregar</button>
                             <button type="button" class="btn btn-outline-secondary text-white" data-bs-dismiss="modal">Cancelar</button>
                           </div>
                         </div>
@@ -136,10 +142,15 @@
                         <form class="d-flex">
                           <div class="input-group flex-nowrap">
                             <span class="input-group-text" id="addon-wrapping"><i class="bi bi-search"></i></span>
-                            <input class="form-control me-2" type="search" placeholder="Buscar" oninput="renderGamesTableSearch(this.value)" aria-describedby="addon-wrapping" />
-                            <select class="form-select" name="search-option" id="search-option">
-                              <option value="name">Nombre</option>
-                              <option value="category">Categoria</option>
+                            <input class="form-control me-2" type="search" placeholder="Buscar" id="game-name-search" oninput="searchGames()" aria-describedby="addon-wrapping" />
+                            <select class="form-select" name="search-option" id="category-option-search" onchange="searchGames()">
+                              <option selected value="all">Todos</option>
+                              <option value="survival">Supervivencia</option>
+                              <option value="shooter">Disparos</option>
+                              <option value="strategy">Estrategia</option>
+                              <option value="simulation">Simulacion</option>
+                              <option value="rpg">RPG</option>
+                              <option value="other">Otro</option>
                             </select>
                           </div>
                         </form>
@@ -210,16 +221,16 @@
                             <div class="modal-body">
                               <form id="modifyGameForm"">
                                 <div class="mb-3">
-                                  <label for="name" class="form-label">Nombre:</label>
-                                  <input type="text" id="name" class="form-control" minlength="2" maxlength="20" required>
+                                  <label for="name-modify" class="form-label">Nombre:</label>
+                                  <input type="text" id="nameModify" class="form-control" minlength="2" maxlength="20" required>
                                 </div>
                                 <div class="mb-3">
-                                  <label for="description" class="form-label">Descripcion</label>
-                                  <input type="text" id="description" class="form-control" required>
+                                  <label for="descriptionModify" class="form-label">Descripcion</label>
+                                  <input type="text" id="descriptionModify" class="form-control" required>
                                 </div>
                                 <div class="mb-3">
-                                  <label for="category" class="form-label">Categoria:</label>
-                                  <select name="category" id="category" class="form-select" required>
+                                  <label for="categoryModify" class="form-label">Categoria:</label>
+                                  <select name="category" id="categoryModify" class="form-select" required>
                                     <option selected value="survival">Supervivencia</option>
                                     <option value="shooter">Disparos</option>
                                     <option value="strategy">Estrategia</option>
@@ -229,12 +240,12 @@
                                   </select>
                                 </div>
                                 <div class="mb-3">
-                                  <label for="trailer-url" class="form-label">URL del trailer</label>
-                                  <input type="text" id="trailerUrl" class="form-control" pattern="^((?:https?:)?\/\/)?((?:www|m)\.)?((?:youtube\.com|youtu.be))(\/(?:[\w\-]+\?v=|embed\/|v\/)?)([\w\-]+)(\S+)?$" required>
+                                  <label for="trailerUrlModify" class="form-label">URL del trailer</label>
+                                  <input type="text" id="trailerUrlModify" class="form-control" pattern="^((?:https?:)?\/\/)?((?:www|m)\.)?((?:youtube\.com|youtu.be))(\/(?:[\w\-]+\?v=|embed\/|v\/)?)([\w\-]+)(\S+)?$" required>
                                 </div>
                                 <div class="form-check">
-                                  <input class="form-check-input" type="checkbox" value="" id="checkPublished">
-                                  <label class="form-check-label" for="checkPublished">
+                                  <input class="form-check-input" type="checkbox" value="" id="checkPublishedModify">
+                                  <label class="form-check-label" for="checkPublishedModify">
                                     Publicar juego.
                                   </label>
                                 </div>
@@ -262,7 +273,7 @@
                       <h2 class="align-self-center fs-5" id="users-table-info-text"></h2>
                       <div>
                         <form class="d-flex">
-                          <input class="form-control me-2" type="search" placeholder="Nombre del usuario" oninput="renderGamesTableSearch(this.value)">
+                          <input class="form-control me-2" type="search" placeholder="Nombre del usuario">
                           <button class="btn btn-outline-primary text-white"><i class="bi bi-search"></i></button>
                         </form>
                       </div>
@@ -350,7 +361,20 @@
         </div>
 			</section>
     </main>
-    <footer>
+    <footer class="container-fluid d-flex flex-wrap justify-content-between align-items-center py-3 border-top bg-dark">
+      <div class="col-md-3 ms-3 d-flex align-items-center">
+        <p class="mb-0 fs-5 text-white">© 2022 Games Chief</p>
+      </div>
+      <div class="col-md-3 d-flex align-items-center justify-content-center mb-md-0 ">
+        <a href="" class="link-dark text-decoration-none"><i class="bi bi-controller fs-1 text-white"></i></a>
+      </div>
+      <div class="nav col-md-3 me-3 justify-content-end">
+        <ul class="d-flex flex-row mb-0 list-unstyled">
+          <li class="ms-3"><i class="bi bi-github text-white fs-3"></i></li>
+          <li class="ms-3"><i class="bi bi-instagram text-white fs-3"></i></li>
+          <li class="ms-3"><i class="bi bi-facebook text-white fs-3"></i></li>
+        </ul>
+      </div>
     </footer>
 	</body>
 </html>
