--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/login-register-style.css"/>
     <title>Game Store</title>
   </head>
   <body>
     <header>
-      <!-- AQUI VA EL NAVBAR -->
+  
     </header>
     <main>
       <!-- AQUI VA EL CONTENIDO DE TU PAGINA -->
