--- a/pages/admin/admin-panel.html
+++ b/pages/admin/admin-panel.html
@@ -16,6 +16,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../../scripts/admin/games-scripts.js" defer></script>
     <script src="../../scripts/admin/users-scripts.js" defer></script>
     <link rel="stylesheet" href="../../styles/admin-styles.css" />
@@ -79,29 +80,29 @@
                   <!-- GAMES LIST HEADER -->
                   <div class="games-header-block d-flex justify-content-between py-4 px-4">
                     <h1 class="fw-bold">Juegos</h1>
-                    <button type="button" class="btn btn-success fw-bold fs-5" onclick="addGame()"><i class="bi bi-plus-lg"></i> Agregar Juego</button>
+                    <button type="button" class="btn btn-success fw-bold fs-5" onclick="addGame()"><i class="bi bi-plus-lg" ></i> Agregar Juego</button>
                     <!-- MODAL PARA AGREGAR JUEGO -->
                     <div class="modal fade" id="addGameModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                       <div class="modal-dialog modal-dialog-centered">
                         <div class="modal-content">
                           <div class="modal-header">
-                            <h5 class="modal-title fs-4 fw-bold" id="staticBackdropLabel">Agregar Juego</h5>
+                            <h5 class="modal-title fs-4 fw-bold">Agregar Juego</h5>
                           </div>
                           <div class="modal-body">
                             <form id="addGameForm">
-                              <div class="mb-3">
+                              <div class="input-control mb-3">
                                 <label for="name" class="form-label">Nombre:</label>
-                                <input type="text" id="name" class="form-control" oninput="validateName()" minlength="2" maxlength="20" required>
-                                <div class="d-none text-success" id="valid-name-text"></div>
-                                <div class="d-none text-danger" id="invalid-name-text"></div>
+                                <input type="text" name="nameAdd" id="name" class="form-control" oninput="validateName()" minlength="2" maxlength="20" required>
+                                <div class="error"></div>
                               </div>
-                              <div class="mb-3">
+                              <div class="input-control mb-3">
                                 <label for="description" class="form-label">Descripcion</label>
-                                <input type="text" id="description" class="form-control" minlength="1" maxlength="50" required>
+                                <textarea name="descriptionAdd" id="description" class="form-control" oninput="validateDescription()" minlength="10" maxlength="100" required></textarea>
+                                <div class="error"></div>
                               </div>
-                              <div class="mb-3">
+                              <div class="input-control mb-3">
                                 <label for="category" class="form-label">Categoria:</label>
-                                <select name="category" id="category" class="form-select" required>
+                                <select id="category" class="form-select" required>
                                   <option value="survival">Supervivencia</option>
                                   <option value="shooter">Disparos</option>
                                   <option value="strategy">Estrategia</option>
@@ -110,20 +111,19 @@
                                   <option selected value="other">Otro</option>
                                 </select>
                               </div>
-                              <div class="mb-3">
-                                <label for="trailerUrl" class="form-label">URL del trailer</label>
-                                <input type="text" id="trailerUrl" class="form-control" pattern="^((?:https?:)?\/\/)?((?:www|m)\.)?((?:youtube\.com|youtu.be))(\/(?:[\w\-]+\?v=|embed\/|v\/)?)([\w\-]+)(\S+)?$" required>
+                              <div class="input-control mb-3">
+                                <label for="trailerUrl" class="form-label">URL del Trailer</label>
+                                <input type="text" name="trailerUrlAdd" id="trailerUrl" class="form-control" pattern="^((?:https?:)?\/\/)?((?:www|m)\.)?((?:youtube\.com|youtu.be))(\/(?:[\w\-]+\?v=|embed\/|v\/)?)([\w\-]+)(\S+)?$" oninput="validateTrailerUrl()" required>
+                                <div class="error"></div>
                               </div>
-                              <div class="form-check">
+                              <div class="input-control form-check">
                                 <input class="form-check-input" type="checkbox" value="" id="checkPublished">
-                                <label class="form-check-label" for="checkPublished">
-                                  Publicar juego.
-                                </label>
+                                <label class="form-check-label" for="checkPublished">Publicar juego.</label>
                               </div>
                             </form>
                           </div>
                           <div class="modal-footer">
-                            <button type="submit" form="addGameForm" class="btn btn-success" id="add-game-confirm">Agregar</button>
+                            <button type="submit" form="addGameForm" class="btn btn-success" id="add-game-confirm" disabled>Agregar</button>
                             <button type="button" class="btn btn-outline-secondary text-white" data-bs-dismiss="modal">Cancelar</button>
                           </div>
                         </div>
